--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fullcalendar/daygrid": "5.10.1",
     "@fullcalendar/interaction": "5.10.1",
     "@swimlane/ngx-datatable": "20.0.0",
-    "bootstrap": "4.5.2",
+    "bootstrap": "^5.3.0-alpha1",
     "chart.js": "2.9.3",
     "clipboard": "2.0.10",
     "core-js": "3.21.1",
